--- a/may-international-main/may-international-main/assets/css/style.css
+++ b/may-international-main/may-international-main/assets/css/style.css
@@ -531,6 +531,12 @@ h4 a {
     margin: 5rem 0;
 }
 
+.text-center {
+    text-align: center!important;
+    padding-top: 1rem;
+    padding-left: 2rem;
+    font-size: 1.5rem;
+}
 .about-content {
     background: linear-gradient(to left, #cb252b, #2f2e7a);
     padding: 3rem;
